# rbf-lang

./: .gitignore  .python-version  README.md  makefile  makefile_  pyproject.toml  rbf.py  rbf_loop.py  tox.ini
.github/workflows/: publish.yml  test-commit.yml  test-tox.yml
c_src/: TestTape.c  tape.c  tape.h
rbf/: __init__.py  __main__.py  _typing.py  cli.py  command.py  exceptions.py  program.py  run.py  tape.py
rbf_lang/: __init__.py  cli.py  program.py  reverse.py  runner.py
src/: main.c  rbf.h  tape.c  tape.h
tests/: conftest.py  test_move_program.py  test_program.py  test_run.py  test_tape.py
tests/rbf/: test_rbf_program.py  test_rbf_run.py  test_rbf_tape.py
