[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rbf-lang"
authors = [{ name = "Marcin Konowalczyk", email = "marcin.konow@lczyk.xyz" }]
dynamic = ["version", "description"]

[project.urls]
home = "https://github.com/marcinkonowalczyk/rbf-lang"

[project.scripts]
rbf = "rbf:cli.main"

# coverage setup
[tool.coverage.run]
omit = ["tests/*", "**/__init__.py"]

# coverage configuration
[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "except ImportError:",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-s", "--tb=short", "--color=yes"]
