[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rbf-lang"
authors = [{ name = "Marcin Konowalczyk", email = "marcin.konow@lczyk.xyz" }]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
home = "https://github.com/marcinkonowalczyk/rbf-lang"

[project.scripts]
rbf = "rbf_lang:cli.main"

# coverage setup
[tool.coverage.run]
omit = ["tests/*", "**/__init__.py"]

# coverage configuration
[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "except ImportError:",
]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "normal"

namespace_packages = true
disallow_untyped_defs = true
# disallow_any_unimported = true
# disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
warn_unused_configs = true
explicit_package_bases = true
# enable_error_code = "explicit-override"
extra_checks = true
local_partial_types = true

files = [
    "./rbf_lang/**/*.py",
    "./tests/**/*.py",
    #
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-s", "--tb=short", "--color=yes"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    #
]
